bug/header z-index fixed

--- a/src/component/Header/Header.module.scss
+++ b/src/component/Header/Header.module.scss
@@ -7,7 +7,7 @@
   background-color: var(--background);
 
   position: fixed;
-  z-index: 999;
+  z-index: 1;
 
   .content {
     width: 80%;
